different background logos - need to figure out how to center it

--- a/public/responsive/base-wide.css
+++ b/public/responsive/base-wide.css
@@ -17,6 +17,11 @@ nav li {
 }
 
 
+.bottom-logo {
+  background:url('/images/services/services_footer_logo.png') no-repeat;
+  width:20em;
+  height:72px;
+}
 
 
 /* homepage */
