cut out clouds so we can do the nice overlay

--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -1,4 +1,6 @@
-<div class='brand-texture'>
+<div class='brand-solid-texture'>
+</div>
+<div class='brand-cloud-texture'>
 </div>
 <header>
   <nav>
@@ -13,8 +15,6 @@
       alt='blazing cloud'>
     </div>
     <div class='cutout'>
-    </div>
-    <div class='clouds'>
     </div>
      <center class='pitch title'> We handcraft mobile experiences.</center>
     <div class='mobiles'>
