--- a/public/responsive/wide/desktop.css
+++ b/public/responsive/wide/desktop.css
@@ -1,16 +1,20 @@
-.brand-texture {
+.brand-solid-texture {
+  background:url('/images/branding/texture.png') repeat center center transparent;
   height:497px;
+  position:absolute;
+  position:absolute;
+  top:91px;
+  width:inherit;
+}
+.brand-cloud-texture {
+  background:url('/images/branding/clouds.png') no-repeat center center transparent;
+  height:497px;
+  position:absolute;
+  top:91px;
+  width:inherit;
 }
 .branding {
   height:560px;
-}
-.branding .clouds {
-  background:url('/images/branding/clouds.png') no-repeat scroll top left transparent;
-  position: absolute;
-  height:1000px;
-  width: 2000px;
-  left: -441px;
-  top: 0px;
 }
 
 .branding .mobiles {
