--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -22,21 +22,13 @@
   </div>
   </header>
   <section class='homepage main grid'>
-     <section class=''>
-     <article class=' introduction'> 
-     <h1> We handcraft mobile experiences.</h1>
-      </article>
-      </section>
-    <hr class='underline'/>
     <section class='about'>
       <article class='tile'>
         <em>Blazing Cloud</em> 
         is a <i>design, strategy </i> and 
         <i>production</i>
         studio specializing
-        in mobile and 
-        convergent experiences
-        across devices
+        in mobile product development.
       </article>
       <article class='tile'>
         <em class='title'>Want to talk about your project?</em>
@@ -51,10 +43,10 @@
         <em class='title'>Strategy &amp; Design</em>
         <p>
           We believe mobile is not just a device, 
-          but a life-style. We are 
-          multi-disciplinary
+          but a paradigm shift. Our
+          multi-disciplinary team of
           designers, developers and strategists 
-          working as a team to deliver 
+          works with you to deliver
           the right experience
           every time.
           </p>
@@ -66,18 +58,14 @@
           <p>
           We design, test and implement native
           applications for all popular touch-enabled
-          devices - iPhone, iPad, Android phones and
+          devices -- iPhone, iPad, Android phones and
           tablets, and Windows Touch devices.</p>
         </article>
         <article class='tile'>
         <em class='title'> Mobile Websites </em>
         <p>
           Research shows that mobile internet traffic
-          is on a sharp rise. We understand that the
-          internet was built on the principle of
-          <i> universality </i> and while all devices
-          will not particpate in the same way, all
-          devices could be participants.</p>
+          is on a sharp rise. We create mobile web apps and responsive web sites that are device and resolution aware.</p>
         </article>
         </section> <!-- services -->
       <hr class='underline'/>
@@ -85,10 +73,9 @@
         <article class='tile'>
         <em class='title'>Blazing Cloud Classes</em>
         <p>
-          We are firm believers in paying it forward.
-          Our year-round classes are geared at 
-          programmers of all levels.
-          <a href="#scholarship">Inquire about a scholarship.</a>
+          Our <a href="#training">innovative classes</a> are geared at
+          programmers of all levels. We are firm believers in paying it forward.
+          Inquire about our <a href="#scholarship">scholarships</a>.
           </p>
           <!--
           <section class='upcoming'>
@@ -106,7 +93,7 @@
         <p>
           We are often invited to speak at various
           engineering events in the bay area and beyond!
-          If you'd like to have us speak at your event, 
+          If you'd like to have us speak at your event,
           <a href="mailto:info@blazingcloud.net">get
             in touch.</a>
           </p>
