more text changes

--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -43,10 +43,8 @@
         <em class='title'>Strategy &amp; Design</em>
         <p>
           We believe mobile is not just a device, 
-          but a paradigm shift. Our
-          multi-disciplinary team of
-          designers, developers and strategists 
-          works with you to deliver
+          but a paradigm shift. We
+          work with you to deliver
           the right experience
           every time.
           </p>
