more text changes

--- a/views/services.erb
+++ b/views/services.erb
@@ -31,15 +31,16 @@
   <article class='tile'>
     <img class='leader' src='images/services/services_mobilewebsites.png' alt='websites are avalible on the mobile device'/>
     <em class='title'> Mobile Websites</em>
-    <p>Mobile is expected to surpass desktop web browsing in the next few years. We create web applications that deliver appropriate mobile experiences and perform effectively across browsers. We are expert at test-driven development for front-end JavaScript, web apps and web services.</p>
+    <p>Mobile is expected to surpass desktop web browsing in the next few years.
+      We are expert at test-driven development for front-end JavaScript, web apps and web services.</p>
   </article>
   <article class='tile'>
     <img class='leader' src='images/services/services_convergent_experiences.png' alt='devices become connected through clouds'/>
     <em class='title'> Convergent Experiences </em>
-    <p>Increasingly, products are required to be available on multiple
-screens. Blazing Cloud offers a holistic approach to web and
-mobile solutions, making sure that applications work well
-together. Where appropriate, we can deliver real-time synchronization across devices.
+    <p>Increasingly, products need to work on multiple
+screens. Our holistic approach to web and
+mobile solutions makes sure that applications work well
+together. We can also deliver real-time synchronization across devices.
 </p>
   </article>
   </section>
