--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -25,8 +25,8 @@
     <section class='about'>
       <article class='tile'>
         <em>Blazing Cloud</em> 
-        is a <i>design, strategy </i> and 
-        <i>production</i>
+        is a <i>design, strategy, </i> and
+        <i>development</i>
         studio specializing
         in mobile product development.
       </article>
@@ -56,7 +56,7 @@
           <p>
           We design, test and implement native
           applications for all popular touch-enabled
-          devices -- iPhone, iPad, Android phones and
+          devices &mdash; iPhone, iPad, Android phones and
           tablets, and Windows Touch devices.</p>
         </article>
         <article class='tile'>
@@ -71,7 +71,7 @@
         <article class='tile'>
         <em class='title'>Blazing Cloud Classes</em>
         <p>
-          Our <a href="#training">innovative classes</a> are geared at
+          Our <a href="#training">innovative classes</a> are geared toward
           programmers of all levels. We are firm believers in paying it forward.
           Inquire about our <a href="#scholarship">scholarships</a>.
           </p>
@@ -89,8 +89,7 @@
         <article class='tile'>
         <em class='title'>Talks</em>
         <p>
-          We are often invited to speak at various
-          engineering events in the bay area and beyond!
+          We are often invited to speak at various events in the bay area and elsewhere.
           If you'd like to have us speak at your event,
           <a href="mailto:info@blazingcloud.net">get
             in touch.</a>
