--- a/views/services.erb
+++ b/views/services.erb
@@ -26,7 +26,7 @@
   <article class='tile'>
     <img class='leader' src='images/services/services_mobileapps.png' alt='native mobile applications leverage device strengths'/>
     <em class='title'> Mobile Apps</em>
-    <p>Our native app development leverages automated testing to increase quality and modern tools for analytics to validate that your application meets your goals.</p>
+    <p>Our native app development includes automated testing to increase quality and modern tools for analytics to validate that your application meets your goals.</p>
   </article>
   <article class='tile'>
     <img class='leader' src='images/services/services_mobilewebsites.png' alt='websites are avalible on the mobile device'/>
