--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -54,7 +54,7 @@
             Mobile Apps
           </em>
           <p>
-          We design, test and implement native
+          We design, test, and implement native
           applications for all popular touch-enabled
           devices &mdash; iPhone, iPad, Android phones and
           tablets, and Windows Touch devices.</p>
