--- a/public/responsive/wide/tablet.css
+++ b/public/responsive/wide/tablet.css
@@ -1,8 +1,12 @@
 .debug {
-background:magenta;
+  background:magenta;
 }
+
 .branding .mobiles {
-  background-image:url('/images/branding/mobiles-728.png');
+  background-image:url('/images/branding/mobiles-1-728.png');
   height:20em;
+}
+.branding {
+  height:500px;
 }
 
