--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -24,7 +24,7 @@
   <section class='homepage main grid'>
     <section class='about'>
       <article class='tile'>
-        <em>Blazing Cloud</em> 
+        <em class='title'>Blazing Cloud</em> 
         is a <i>design, strategy, </i> and
         <i>development</i>
         studio specializing
@@ -32,9 +32,7 @@
       </article>
       <article class='tile'>
         <em class='title'>Want to talk about your project?</em>
-        <p>
           <a href="mailto:info@blazingcloud.net">Email us.</a>
-        </p>
       </article>
       </section> <!-- about section -->
         <hr class='underline'/>
