--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -23,16 +23,21 @@
 </header>
   <section class='homepage main grid'>
     <section class='about'>
-      <article class='tile'>
+    <article class='tile first'>
+    <p>
         <em class='title'>Blazing Cloud</em> 
         is a <i>design, strategy, </i> and
         <i>development</i>
         studio specializing
         in mobile product development.
+        </p>
       </article>
-      <article class='tile'>
-        <em class='title'>Want to talk about your project?</em>
-          <a href="mailto:info@blazingcloud.net">Email us.</a>
+      <article class='tile last'>
+      <p>
+      <em class='title'>Want to talk about your project?</em>
+      <br/>
+      <a href="mailto:info@blazingcloud.net">Email us.</a>
+      </p>
       </article>
       </section> <!-- about section -->
         <hr class='underline'/>
