--- a/public/responsive/grid.css
+++ b/public/responsive/grid.css
@@ -9,7 +9,8 @@ body {
 /* our base tile takes up the whole display */
 .tile {
   float:left;
-  width:100%;
+  width:99%;
+  margin-right:1%;
 }
 /* grid can appear multiple times in the display 
  * each grid ensures that new tiles inside it begin on a new
