--- a/public/responsive/base.css
+++ b/public/responsive/base.css
@@ -18,7 +18,7 @@ a.active { color: rgb(124,63,9); text-decoration:underline; }
 body header,
 body footer > section {
   margin: 0 auto;
-  width:99%;
+  width:100%;
   position:relative;
 }
 body .main {
@@ -40,8 +40,10 @@ body .main {
  * media in this manner for another device
  */
 .logo {
-  background:url('/images/logo/with-shadow.png') no-repeat 0 0;
-  width:349px;
+  background-image:url('/images/logo/with-shadow.png');
+  background-repeat:no-repeat;
+  background-position:center center;
+  width:inherit;
   height:71px;
   z-index:1000;
   position:relative;
@@ -50,13 +52,14 @@ body .main {
   background-image:url('/images/logo/only-shadow.png');
   background-repeat:no-repeat;
   background-position: center center;
-  width:20em;
+  width:inherit;
   height:72px;
 }
 .branding {
   position:relative;
   overflow:hidden;
   height: 300px;
+  width:inherit;
 }
 .branding .pitch {
   font-size:2em;
@@ -72,18 +75,49 @@ body .main {
 }
 /* end responsive content */
 
-/* fonts */
-body {
+/* 
+ *
+ * base font size for 1em (16px)
+ * is being redeclared here.
+ *
+ * being set to 14px for display 
+ *
+ * default font is BitterRegular
+ * then sans-serif
+ *
+ * */
+html, body, div, span, applet,
+object, iframe, 
+h1, h2, h3, h4, h5, h6, 
+p, blockquote, 
+pre, a, abbr, 
+acronym, address, 
+big, cite, code, 
+del, dfn, em, 
+img, ins, kbd, 
+q, s, samp, small, 
+strike, strong, sub, 
+sup, tt, var, b, u, 
+i, center, dl, dt, dd, ol, 
+ul, li, fieldset, form, label,
+legend, table, caption, tbody, 
+tfoot, thead, tr, th, td, 
+article, aside, canvas, details, 
+embed, figure, figcaption, footer, 
+header, hgroup, menu, nav, output, 
+ruby, section, summary, time, mark, 
+audio, video {
   font-family: BitterRegular, sans-serif;
   font-size:14px;
   line-height:1.5em;
 }
 
 .title {
-  display:block;
   font-family: PTSansNarrowBold;
+  display:block;
   font-size:1.8em;
 }
+
 code, pre {
   font-family:courier;
 }
@@ -124,8 +158,9 @@ footer {
   color:rgb(250,250,250);
   font-weight:bold;
   clear:both;
-  min-height:80em;
+  min-height:19em;
   background: url('/images/textures/stone.png');
+  margin-top:10em;
 }
 
 /*
@@ -178,5 +213,10 @@ footer {
 }
 .homepage .about article {
  font-size: 1.2em;
+}
+.homepage .about a {
+ font-family: PTSansNarrowBold;
+ font-size: 1.2em;
+
 }
 
