--- a/public/responsive/wide/desktop.css
+++ b/public/responsive/wide/desktop.css
@@ -24,7 +24,8 @@ header,.main, footer section{
 footer {
   min-width:100%;
   max-width:100%;
-  margin: 0 auto;
+  margin-left:auto;
+  margin-right:auto;
 }
 
 .debug {
