--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -72,7 +72,8 @@
       <hr class='underline'/>
       <section class='grid community '>
         <article class='tile'>
-        <em class='title'>Blazing Cloud Classes</em>
+        <img class='leader' src="/images/homepage/training.png" alt='blazing cloud training'/>
+        <em class='title'>Blazing Cloud Training</em>
         <p>
           Our <a href="#training">innovative classes</a> are geared toward
           programmers of all levels. We are firm believers in paying it forward.
@@ -87,15 +88,15 @@
               <li><span class='date'>May21</span>
                 <a href="#">Rails for Beginners</a></li>
             </ol>
-            </section> <!-- upcoming -->
+            </section>  <!---- upcoming -->
         </article>
         <article class='tile'>
-        <em class='title'>Talks</em>
-        <p>
-          We are often invited to speak at various events in the bay area and elsewhere.
-          If you'd like to have us speak at your event,
-          <a href="mailto:info@blazingcloud.net">get
-            in touch.</a>
+          <img class='leader' src="/images/homepage/talks.png" alt='blazing cloud talks'/>
+          <em class='title'>Talks</em>
+          <p>
+            We are often invited to speak at various events in the bay area and elsewhere.
+            If you'd like to have us speak at your event,
+            <a href="mailto:info@blazingcloud.net">get in touch.</a>
           </p>
           <!--
           <section class='previous'>
@@ -104,7 +105,7 @@
               <li><span class='date'>Mar23</span>
                 <a href="#">Sarah Allen - Mobile is Everything</a></li>
             </ol>
-            </section> <!-- previous -->
+            </section> <!---- previous -->
         </article>
         </section> <!-- community -->
       </section> <!-- main section -->
