--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -72,8 +72,8 @@
       <hr class='underline'/>
       <section class='grid community '>
         <article class='tile'>
-        <img class='leader' src="/images/homepage/training.png" alt='blazing cloud training'/>
         <em class='title'>Blazing Cloud Training</em>
+        <img class='leader' src="/images/homepage/training.png" alt='blazing cloud training'/>
         <p>
           Our <a href="#training">innovative classes</a> are geared toward
           programmers of all levels. We are firm believers in paying it forward.
@@ -91,8 +91,8 @@
             </section>  <!---- upcoming -->
         </article>
         <article class='tile'>
-          <img class='leader' src="/images/homepage/talks.png" alt='blazing cloud talks'/>
           <em class='title'>Talks</em>
+          <img class='leader' src="/images/homepage/talks.png" alt='blazing cloud talks'/>
           <p>
             We are often invited to speak at various events in the bay area and elsewhere.
             If you'd like to have us speak at your event,
@@ -109,4 +109,4 @@
         </article>
         </section> <!-- community -->
       </section> <!-- main section -->
-
+      <div class='clear'></div>
