--- a/public/responsive/base.css
+++ b/public/responsive/base.css
@@ -57,7 +57,7 @@ body .main {
 .branding {
   position:relative;
   overflow:hidden;
-  height: 300px;
+  height: 24em;
   width:inherit;
 }
 .branding .pitch {
