refactor nav into a partial

--- a/views/blog.erb
+++ b/views/blog.erb
@@ -1,14 +1,8 @@
   <header>
   <div class='logo' 
     alt='blazing cloud'></div>
-  <nav>
-  <ol>
-    <li><a href='/'>Home</a></li>
-    <li><a href='/services'>Services</a></li>
-    <li><a class='active' href='/blog'>Blog    </a></li>
-  </ol>
-</nav>
-</header>
+  <%= erb :nav, :locals => {:active => 'blog' } %>
+  </header>
 <section class='main blog'>
   <%=articles%>
 </section>
