--- a/views/services.erb
+++ b/views/services.erb
@@ -2,13 +2,8 @@
   <header>
   <div class='logo' 
     alt='blazing cloud'></div>
-  <nav>
-  <ol>
-    <li><a  href='/'>Home</a></li>
-    <li><a class='active' href='/services'>Services</a></li>
-    <li><a href='/blog'>Blog    </a></li>
-  </ol>
-</nav>
+    <%= erb :nav, :locals => {:active => 'services' } %>
+
 </header>
   <section class='main'>
   <article class='introduction '>
