--- a/views/layout.erb
+++ b/views/layout.erb
@@ -6,34 +6,34 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0">
-  <link rel="stylesheet" href="assets/reset.css">
-  <link rel="stylesheet" href="assets/fonts.css">
-  <link rel="stylesheet" href="assets/responsive/grid.css">
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="fonts.css">
+  <link rel="stylesheet" href="responsive/grid.css">
   
   <!-- default grid - expect this to get adjusted for different devices-->
-  <link rel="stylesheet" href="assets/responsive/grid.css">
+  <link rel="stylesheet" href="responsive/grid.css">
   <!-- default device-->
   <link rel="stylesheet" 
-        href="assets/responsive/base.css">
+        href="responsive/base.css">
   <!-- small devices -->
   <link rel="stylesheet" 
-        href="assets/responsive/base-small.css"  
+        href="responsive/base-small.css"  
         media='screen and (min-width:20em) and (max-width:48em) ' />
   <!-- small landscape device -->
   <link rel="stylesheet" 
-        href="assets/responsive/small/landscape.css"  
+        href="responsive/small/landscape.css"  
         media='screen and (min-width:30em) and (max-width:48em) ' />
   <!-- wide devices -->
   <link rel="stylesheet" 
-        href="assets/responsive/base-wide.css"  
+        href="responsive/base-wide.css"  
         media='screen and (min-width:48em)' />
   <!-- wide tablet device -->
   <link rel="stylesheet" 
-        href="assets/responsive/wide/tablet.css"  
+        href="responsive/wide/tablet.css"  
         media='screen and (min-width:48em) and (max-width:64em)' />
   <!-- wide desktop device -->
   <link rel="stylesheet" 
-        href="assets/responsive/wide/desktop.css" 
+        href="responsive/wide/desktop.css" 
         media='screen and (min-width:64em)' />
 
 </head>
