--- a/views/nav.erb
+++ b/views/nav.erb
@@ -1,4 +1,4 @@
-  <nav>
+<nav class='cloud'>
   <ol>
     <li><a <%= "class='active'" if active == 'home' %> href='/'>Home</a></li>
     <li><a <%= "class='active'" if active == 'services' %> href='/services'>Services</a></li>
