--- a/views/nav.erb
+++ b/views/nav.erb
@@ -2,6 +2,6 @@
   <ol>
     <li><a <%= "class='active'" if active == 'home' %> href='/'>Home</a></li>
     <li><a <%= "class='active'" if active == 'services' %> href='/services'>Services</a></li>
-    <li><a <%= "class='active'" if active == 'blog' %> href='/blog'>Blog    </a></li>
+    <li><a <%= "class='active'" if active == 'blog' %> href='http://blog.blazingcloud.net'>Blog    </a></li>
   </ol>
 </nav>
