really fix eventbrite link

--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -71,7 +71,7 @@
         <em class='title'>Blazing Cloud Training</em>
         <img class='leader' src="/images/homepage/training.png" alt='blazing cloud training'/>
         <p>
-          Our <a href="http://blazingcloud.eventbrite.net/">innovative classes</a> are geared toward
+          Our <a href="http://blazingcloud.eventbrite.com/">innovative classes</a> are geared toward
           programmers of all levels. We are firm believers in paying it forward.
           Inquire about our <a href="https://docs.google.com/spreadsheet/viewform?formkey=dEdpay16SEJ0dWF4UUhFYUdvc1NDemc6MA">scholarships</a>.
           </p>
