--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -1,6 +1,6 @@
 <div class='brand-solid-texture'>
 </div>
-<div class='brand-cloud-texture'>
+<div class='brand-cloud-logo'>
 </div>
 <header>
   <div class='branding'>
@@ -8,13 +8,11 @@
       alt='blazing cloud'>
     </div>
     <%= erb :nav, :locals => {:active => 'home' } %>
-    <div class='cutout'>
-    </div>
     <center class='pitch title'> 
       We handcraft mobile experiences.
     </center>
-    <div class='mobiles'>
-    </div>
+<div class='mobiles'>
+</div>
   </div>
   </header>
   <section class='homepage main grid'>
