update blog link and text improvement

--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -42,10 +42,10 @@
         <em class='title'>Strategy &amp; Design</em>
         <p>
           We believe mobile is not just a device, 
-          but a paradigm shift. We
+          but a paradigm shift. Mobile requires a new perspective. We
           work with you to deliver
           the right experience
-          every time.
+          to meet your goals.
           </p>
         </article>
         <article class='tile'>
