blog new address ; tracker bug https://www.pivotaltracker.com/story/show/26756591 fix logo on service page

--- a/public/responsive/base-wide.css
+++ b/public/responsive/base-wide.css
@@ -27,7 +27,7 @@ nav li {
   width:10em;
 }
 /* turn off logo on wide as we use brand-cloud-logo */
-.logo {
+.homepage .logo {
   background:0;
 }
 .underline {
