blog rewrite is now  /short-read; /blog is  redirect; added class homepage to allow logo fix to work

--- a/views/homepage.erb
+++ b/views/homepage.erb
@@ -2,7 +2,7 @@
 </div>
 <div class='brand-cloud-logo'>
 </div>
-<header>
+<header class='homepage' >
   <div class='branding'>
     <div class='logo' 
       alt='blazing cloud'>
