--- a/views/services.erb
+++ b/views/services.erb
@@ -1,7 +1,8 @@
 
-  <header>
+<header>
+<a href='/'>
   <div class='logo' 
-    alt='blazing cloud'></div>
+    alt='blazing cloud'></div></a>
     <%= erb :nav, :locals => {:active => 'services' } %>
 
 </header>
